--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,5 +1,6 @@
 [global_config]
   enabled_plugins = ActivityWatch, LaunchpadCodeURLHandler, APTURLHandler, Logger, LaunchpadBugURLHandler
+  title_font = Monospace Bold 9
 [keybindings]
 [layouts]
   [[default]]
@@ -14,6 +15,7 @@
   [[default]]
     background_color = "#282828"
     cursor_color = "#aaaaaa"
+    font = Monospace Bold 10
     foreground_color = "#ebdbb2"
     palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     scrollback_infinite = True
